<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/recent"
        android:title="@string/history" />

    <item
        android:id="@+id/addFragment"
        android:checkable="false"
        android:icon="@drawable/newa"
        android:title="@string/add" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/fund"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/setting"
        android:title="@string/title_dashboard" />

</menu>
