<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.haojiapplication.ui.home.HomeFragment"
        android:label="@string/app"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.haojiapplication.ui.add.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/add_fragment" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.haojiapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>